# gd-cm-202512

./: .env  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt  run_conda.sh  start.sh
app/: config.py  database.py  main.py  models.py  schemas.py
app/files/: mml_str.json  prompt.md  prompt_1.md  rules.json  work_order.json
app/files/data/: mml_num.json  mml_str.json
app/files/rules/: rules.json  rules_mock_list.json
app/files/solutions/: FA00001.md  FA00002.md  FA00003.md  FA00004.md  FA00005.md  FA00006.md  FA00007.md  FA00008.md  FA00009.md  FA00010.md  FA00011.md  FA00012.md  FA00013.md  FA00014.md  FA00015.md  FA00016.md  FA00017.md
app/llm/: agent.py
app/routers/: api.py
app/services/: data_service.py  mock_service.py
conf/redis/: redis-master.conf  redis-slave.conf  sentinel.conf
scripts/: convert_pg_to_mysql.ps1
test/: test_diagnosis.py  test_work_order.py
