[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "langchain>=1.1.0",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=3.2.0",
    "psycopg[binary]>=3.2.13",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "api",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--alluredir=./allure-results --clean-alluredir"
testpaths = [
    "test",
]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "allure-pytest>=2.15.2",
    "pytest>=9.0.1",
]
